--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,9 +5,10 @@
 body {
   @apply 
   bg-white
-  text-zinc-600
+  text-zinc-500
   dark:text-zinc-300 
-  dark:bg-zinc-800
+  dark:bg-zinc-800;
+  transition: all 200ms ease;
 }
 
 #checkbox {
@@ -43,7 +44,7 @@ h3,
 h4,
 h5 {
   @apply 
-    text-indigo-600
+    text-zinc-700
     dark:text-zinc-100
 }
 
@@ -52,7 +53,7 @@ h1,
   @apply 
     text-5xl
     font-black
-    text-black
+    text-indigo-500
     dark:text-indigo-400
 }
 
@@ -62,9 +63,9 @@ h1,
 
 .blog-post header h1 {
   @apply   
-    text-5xl    
-    m-0  
-    text-indigo-500      
+    text-5xl        
+    mb-4  
+    text-zinc-500      
     dark:text-zinc-100    
 }
 
@@ -74,6 +75,8 @@ h1,
   h4, 
   h5 {  
     @apply 
+      text-zinc-700 
+      dark:text-zinc-200 
       font-bold 
       font-serif
       mt-10
@@ -91,15 +94,31 @@ h1,
 }
 
 .blog-post section p {
-  @apply text-lg mb-5 font-medium font-serif
+  @apply text-lg
+   text-zinc-600
+   dark:text-zinc-300
+   mb-5 
+   font-medium 
+   font-serif
 }
 
 .blog-post section ul {
-  @apply list-disc pl-4 mb-4
+  @apply 
+  list-disc 
+  pl-4 
+  mb-4 
+  text-zinc-600 
+  marker:text-indigo-600
+  dark:text-zinc-300
+  dark:marker:text-indigo-400
 }
 
 .blog-post section a {
-  @apply text-indigo-600 dark:text-indigo-400 underline underline-offset-2
+  @apply 
+    text-indigo-600 
+    dark:text-indigo-400 
+    underline 
+    underline-offset-2
 }
 
 
