--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -71,21 +71,23 @@ h1,
   h4, 
   h5 {  
     @apply 
-      text-zinc-700 
-      dark:text-zinc-200 
-      font-bold 
-      font-serif
-      mt-10
-      mb-5      
+    text-zinc-600 
+    dark:text-zinc-300 
+    font-bold 
+    font-serif
+    mt-0
+    mb-3   
+  }
+  
+  .blog-post section h2 {
+    @apply text-3xl 
+    text-zinc-500 
+    dark:text-zinc-400 
 }
-
-.blog-post h2 {
-  @apply text-2xl
-}
-.blog-post h3 {
+.blog-post section h3 {
   @apply text-xl
 }
-.blog-post h4 {
+.blog-post section h4 {
   @apply text-lg
 }
 
@@ -101,7 +103,7 @@ h1,
 .blog-post section ul {
   @apply 
   list-disc 
-  pl-4 
+  pl-7 
   mb-4 
   text-zinc-600 
   marker:text-indigo-600
