--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,18 +12,16 @@ body {
 }
 
 #checkbox-wrapper {
-  width: 62px;
-  padding: 0 1px;
-  overflow: hidden;
-  border-radius: 20px;
-  @apply outline outline-1;
+  width: 64px;
+  padding: 0 1px;  
+  @apply rounded-full border;
 }
 
 #checkbox {
   opacity: 1;  
   position: absolute;    
-  height: 28px;    
-  left: 3px;
+  height: 30px;    
+  left: 5px;
   z-index: 2;
   cursor: pointer;  
   border-radius: 5px;
@@ -41,7 +39,7 @@ body {
   position: absolute;
   inset: 2px;  
   bottom: 3px;
-  left: -2px;
+  left: -3px;
   width: 26px;
   transition: all 300ms ease;
   border-radius: 20px;
