--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,16 +13,15 @@ body {
 
 #checkbox-wrapper {
   width: 66px;
-  padding: 0 1px;  
-  padding-bottom: 1.5px;
+  padding: 0 1px;    
   @apply rounded-full border;
 }
 
 #checkbox {
   opacity: 1;  
   position: absolute;    
-  height: 30px;    
-  left: 5px;
+  height: 25px;    
+  left: 6px;
   z-index: 2;
   cursor: pointer;  
   border-radius: 5px;
@@ -38,8 +37,9 @@ body {
   content: " ";
   background: chartreuse;  
   position: absolute;
-  inset: 2px;  
-  bottom: 3px;
+  inset: 0;    
+  top: 3px;
+  bottom: -1px;
   left: -3px;
   width: 26px;
   transition: all 300ms ease;
@@ -47,9 +47,9 @@ body {
   @apply 
     bg-indigo-500 
     dark:bg-indigo-400     
-    shadow 
+    /* shadow 
     shadow-indigo-500/50
-    dark:shadow-indigo-400/50
+    dark:shadow-indigo-400/50 */
     ;    
 }
 
